src/pages/Contacts/styles.scss
.contacts-content {
	padding: 40px;
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: wrap;
	gap: 30px 0;
}
.contact-me {
}
.contact-me__image{
	max-width: 100%;
	max-height: 400px;
	border-radius: 40px;
	margin: 0px 0px 40px 0px;
	transition: all .3s ease;
	&:hover{
		transform: scale(1.01);

	}
}
.contacts-title {
	font-size: 2rem;
	margin: 0px 0px 20px 0px;
}
.contacts-info {
}
.contacts-info__item {
	margin: 0px 0px 20px 0px;
	display: flex;
	align-items: center;
	gap: 10px;
	img{
		width: 60px;
		height: 60px;
	}
	h3{
		font-size: 1.5rem;
		margin: 0px 0px 10px 0px;
		color: tomato;
	}
	p{
		font-size: 1.2rem;
		transition: all .3s ease;
		&:hover {
			cursor: pointer;
			transform: scale(1.05);
			color: tomato;
		}
		a{
			text-decoration: underline;
			
		}
	}
}

